# screening-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
knowledge_base/: 00-README.md  01-sobre-grupo-sazon.md  02-rol-repartidor.md  03-requisitos.md  04-vehiculo-y-equipo.md  05-jornada-y-horarios.md  06-salario-y-pagos.md  07-contrato-y-beneficios.md  08-proceso-de-seleccion.md  09-ciudades-y-zonas.md  10-datos-y-privacidad.md  11-preguntas-frecuentes.md
scripts/: ingest_kb.py
src/: __init__.py  config.py  main.py  telegram_bot.py
src/agents/: prompts.py  provider.py  retrieval.py  schemas.py  stt.py
src/data/: service_areas.py
src/fsm/: enums.py  flow.py  models.py
src/orchestrator/: decision.py  engine.py  handoff.py  validation.py
src/storage/: db.py  models.py  repository.py
tests/: fakes.py  test_flow.py
